--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENVIRONMENT='production' node index",
-    "dev": "NODE_ENVIRONMENT='development' nodemon index",
+    "start": "npm run build && NODE_ENVIRONMENT='production' node index",
+    "dev": "npm run build && NODE_ENVIRONMENT='development' nodemon index",
     "prod": "npm start",
     "build": "npm run build:jsx && npm run build:js && npm run build:css",
     "build:jsx": "jsx src/ lib/",
-    "build:js": "browserify lib/main.js -o static/main.js",
+    "build:js": "mkdir -p static && browserify lib/main.js -o static/main.js",
     "build:css": "autoprefixer src/main.css -o static/main.css",
     "watch": "npm run build && onchange src/* src/**/* -- npm run build"
   },
