--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
   "author": "cvan",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer": "^5.1.0",
+    "browserify": "^9.0.3",
     "hapi": "^8.4.0",
+    "nodemon": "^1.3.7",
     "react": "^0.12.2",
     "react-document-title": "^1.0.2",
     "react-router": "^0.12.4",
+    "react-tools": "^0.13.1",
     "request": "^2.51.0"
   },
   "devDependencies": {
-    "autoprefixer": "^5.0.0",
-    "browserify": "^9.0.3",
-    "nodemon": "^1.3.7",
-    "onchange": "0.0.2",
-    "react-tools": "^0.12.2"
+    "onchange": "^1.0.0"
   },
   "repository": {
     "type": "git",
